@@ -10,6 +10,7 @@ require "data-updates/resin"
 require "data-updates/rubber"
 require "data-updates/science-cost-tweaker"
 require "data-updates/slag-processing"
+require "data-updates/SpaceMod"
 require "data-updates/sulfur"
 require "data-updates/thermal-extractor"
 require "data-updates/wood"
